app/assets/stylesheets/style.css
@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);

body {
  margin: 0;
  padding: 0;
  background: #F7F7F7;
}

.header{
  grid-area: header;
  display: grid;
  grid-template-columns: 1fr 10fr 1fr;
  grid-template-rows: 60px 40px;
  grid-template-areas:
    "top_bar top_bar top_bar"
    "nav nav nav"
}

/**** top_bar ****/

.top_bar {
  grid-area: top_bar;
  position: fixed;
  z-index: 100;
  font-family: arial;
  background: #3366ff;
  box-shadow: 0px 1px 3px #3366ff;
  margin: 0;
  padding: 0;
  height: 60px;
  display: grid;
  align-items: center;
  justify-items: center;
  grid-template-columns: .5fr 1fr 9fr 2fr .5fr;
  grid-template-rows: 100%;
  grid-template-areas:
    ". logo search welcome ."
}

.top_bar .logo{
  grid-area: logo;
}

.logo h1,
.logo h1 a {
  margin: 0;
  margin-top: .25em;
  padding: 0;
  text-decoration: none;
  color: white;
}

.search {
  grid-area: search;
  width: 100%;
}

.search input#gift_search {
  position: relative;
  height: 2em;
  width: 85%;
  font-size: 1em;
  border: 1px solid #0F2041;
  border-radius: 5px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  padding-left: 20px;
  margin-left: 40px;
}

.search button.search_btn {
  position: absolute;
  width: 4em;
  height: 3.25em;
  border-radius: 5px;
  background: #0F2041;
  border: 1px solid #0F2041;
  border-left: 0px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  font-family: FontAwesome, 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color: white;
  margin-right: 40px;
}

.top_bar .welcome {
  grid-area: welcome;
  color: white;
  margin-top: .25em;
  justify-self: end;
}

/**** nav  ****/

.nav {
  grid-area: nav;
  font-family: arial;
  background: #0F2041;
  box-shadow: 0px 1px 3px #0F2041;
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;

}

.nav li:empty {
  display: none;
}

ul.nav li:first-child {
  margin-left: 5em;
}

.nav li {
  display: inline-block;
  color: white;
  padding: 10px;
}

.nav li a{
  color: white;
  text-decoration: none;
  padding: 10px;
  margin: 0 10px 0 10px;
}

.nav li:hover {
  background-color: #99ccff;
  padding: 10px;
  box-shadow: 0px 0 3px 0 #99ccff;
}

/**** Welcome ****/

.intro_container {
  height: 70vh;
  max-height: 600px;
  background: url("dandelion.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: Arial;
}

.intro {
  text-align: center;
}

/**** main ****/

.wrapper {
  display: grid;
  grid-template-columns: 1fr 10fr 1fr;
  grid-template-rows: auto;
  grid-template-areas:
    ". main .";
}

.main {
  grid-area: main;
  width: 100%;
}

/**** wishlists ****/

.wishlists {
  list-style: none;
  text-align: center;
  display: flex;
  font-size: 0;
}

.wishlists li img,
.wishlists li a {
  display: block;
  text-decoration: none;
  color: black;
  margin: 2px auto;
  font-size: 16px;
}

.wishlists li img {
  height: 50px;
  width: 50px;
}


/**** gifts  ****/

.gift_list {
  list-style: none;
  width: 800px;
  margin: 0 auto;
  display:flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.gift_list li {
  display: inline-block;
  width: 200px;
  height: 325px;
  background: white;
  border-radius: 5px;
  margin: .5em;
  padding: 1.5em;
  position: relative;
  box-shadow: 3px 3px 5px #888888;
  text-decoration: none;
}

.gift_list li img {
  display: block;
  margin: auto;
  max-width:100%;
  max-height:100%;
}

.gift_list a {
  display: block;
  text-decoration: none;
  font-weight: bold;
  color: #0F2041;
  text-align: center;
}

.card_button, .card_button_added {
  width: 200px;
  background: #3366ff;
  color: white;
  padding: 0.5rem;
  border: none;
  border-radius: 1rem;
  position: absolute;
  bottom: 1.5em;
  font-size: 12px;
}

.card_button_added {
  background: #0F2041;
}

.gift_list .edit_gift input {
  background: #135fd8;
}

.item_button {
  width: 200px;
  background: #3366ff;
  color: white;
  padding: 0.5rem;
  border: none;
  border-radius: 1rem;
  font-size: 12px;
}
.gift_item {
  border: 1px solid #0F2041;
  border-radius: 5px;
  background: white;
  margin: 1em;
  padding: 1em;
  display: flex;
  align-items: center;
}

.image_and_button {
  width: 50%;
  padding: 2em;
}

.image_and_button img {
  margin: 0 30px;
}

.image_and_button .item_button {
  margin: 0 10px;
}

.category_button {
  text-indent:0px;
  border:1px solid #3366ff;
  display:inline-block;
  color:#111111;
  font-size:14px;
  font-weight:normal;
  font-style:normal;
  font-family: arial;
  height:25px;
  line-height:25px;
  width:auto;
  padding: 0 1em;
  text-decoration:none;
  text-align:center;
}

.category_button:hover {
  border: 1px solid #0F2041;
  background: #0F2041;
  color: white;
}

/**** reviews  ****/

.review_item {
  border: 1px solid #0F2041;
  border-radius: 5px;
  background: white;
  margin: 1em;
  padding: 1em;
}

.big_btn {
  display: block;
  width: 97%;
  background: #0F2041;
  color: white;
  margin: 1em;
  padding: 1em;
  border: none;
  border-radius: 5px;
  font-size: 12px;
}

.form {
  background: white;
  border: 1px solid #0F2041;
  border-radius: 5px;
  margin: 1em;
  padding: 1em;
}

.form textarea {
  resize: none;
  box-sizing:border-box;
  padding: 1em;
  width: 100%;
  height: 150px;
  border: 1px solid #0F2041;
  border-radius: 5px;
}

p.rating {
  content: "\f005";
}

/**** login ****/
.login_wrapper {
  height: 70vh;
  max-height: 600px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: Arial;
}

.login {
  display: inline-block;
  width: 350px;
  background: white;
  border-radius: 5px;
  padding: 1em 1.5em;
  box-shadow: 3px 3px 5px #888888;
  text-decoration: none;
  text-align: center
}

.login h2{
  margin-top: 0;
}

.login .field label {
  display: inline-block;
  float: left;
  clear: left;
  width: 125px;
  padding: 5px 10px;
  text-align: right;
}

.login .field input {
  border: 1px solid black;
  width: 150px;
  border-radius: 2px;
  padding: 5px;
  height: 15px;
  float: left;
}

.login .actions {
  display:block;
  float: none;
}

.login .actions input {
  width: 150px;
  background: #3366ff;
  color: white;
  padding: 0.5rem;
  border: none;
  border-radius: 1rem;
  font-size: 12px;
}

.login .fbutton {
  display: inline-block;
  align-self: center;
  margin: 1em 0;
}

.login .fbutton a {
  text-decoration: none;
  color: white;
}

/**** Signup ****/

.signup_wrapper {
  height: 70vh;
  max-height: 600px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  font-family: Arial;
}

.signup {
  width: auto;
  background: white;
  border-radius: 5px;
  padding: 2em 3em;
  position: relative;
  box-shadow: 3px 3px 5px #888888;
  text-decoration: none;
  text-align: center;
}

.signup h2 {
  margin-top: 0;
}

.signup .field label {
  display: inline-block;
  float: left;
  clear: left;
  text-align: left;
  width: 200px;
  margin: 5px 5px;
}

.signup .field input {
  float: left;
  clear: left;
  width: 100%;
  height: 2em;
  border: 1px solid black;
  border-radius: 2px;
  padding: 0 0 0 5px;
}

.signup .pass_min {
  float: left;
  clear: both;
  font-size: 12px;
}

.signup .actions input {
  width: 150px;
  background: #3366ff;
  color: white;
  padding: 0.5rem;
  border: none;
  border-radius: 1rem;
  font-size: 12px;
  margin: 1em;
}

.signup .fbutton a {
  text-decoration: none;
  color: white;
}
/**** star rating  ****/

.rating { float:left;}
.rating input {display: none;}
.rating label:before {
  margin: 5px;
  font-size: 1.25em;
  font-family: FontAwesome;
  display: inline-block;
  content: "\f005";
}

.rating  label {
  color: #ddd;
  float: right;
}

.rating input:checked ~ label, /* show gold star when clicked */
.rating:not(:checked) label:hover, /* hover current star */
.rating:not(:checked) label:hover ~ label {
  color: #FFD700;
} /* hover previous stars in list */

.rating input:checked + label:hover, /* hover current star when changing rating */
.rating input:checked ~ label:hover,
.rating label:hover ~ input:checked ~ label, /* lighten current selection */
.rating input:checked ~ label:hover ~ label { color: #FFED85;  }

p.rating i {
  color: #FFD700;
}

/***** Facebook Button ****/

.social_button {
  box-sizing: border-box;
  position: relative;
  max-width: 15em;
  margin: 0.2em;
  padding: 0 15px 0 46px;
  border: none;
  text-align: center;
  line-height: 34px;
  white-space: nowrap;
  border-radius: 0.2em;
  font-size: 16px;
  color: #FFF;
}
.social_button:before {
  content: "";
  box-sizing: border-box;
  position: absolute;
  top: 0;
  left: 0;
  width: 34px;
  height: 100%;
}
.social_button:focus {
  outline: none;
}
.social_button:active {
  box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
}


/* Facebook */
.fbutton {
  background-color: #4C69BA;
  background-image: linear-gradient(#4C69BA, #3B55A0);
  /*font-family: "Helvetica neue", Helvetica Neue, Helvetica, Arial, sans-serif;*/
  text-shadow: 0 -1px 0 #354C8C;
}
.fbutton:before {
  border-right: #364e92 1px solid;
  background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_facebook.png') 6px 6px no-repeat;
}
.fbutton:hover,
.fbutton:focus {
  background-color: #5B7BD5;
  background-image: linear-gradient(#5B7BD5, #4864B1);
}


/**** AMAZON button ****/
.amazon_button {
  -moz-box-shadow:inset 0px 1px 0px 0px #f9eacf;
  -webkit-box-shadow:inset 0px 1px 0px 0px #f9eacf;
  box-shadow:inset 0px 1px 0px 0px #f9eacf;
  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #F6DD9F), color-stop(1, #F0C24D) );
  background:-moz-linear-gradient( center top, #F6DD9F 5%, #F0C24D 100% );
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=’#F6DD9F‘, endColorstr=’#F0C24D‘);
  background-color:#f5d78a;
  -webkit-border-top-left-radius:6px;
  -moz-border-radius-topleft:6px;
  border-top-left-radius:6px;
  -webkit-border-top-right-radius:6px;
  -moz-border-radius-topright:6px;
  border-top-right-radius:6px;
  -webkit-border-bottom-right-radius:6px;
  -moz-border-radius-bottomright:6px;
  border-bottom-right-radius:6px;
  -webkit-border-bottom-left-radius:6px;
  -moz-border-radius-bottomleft:6px;
  border-bottom-left-radius:6px;
  text-indent:0px;
  border:1px solid #cbaa5c;
  display:inline-block;
  color:#111111;
  font-size:14px;
  font-weight:normal;
  font-style:normal;
  font-family: arial;
  height:25px;
  line-height:25px;
  width:150px;
  text-decoration:none;
  text-align:center;
}
.amazonbutton:hover {
  background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #F5D589), color-stop(1, #EEBA35) );
  background:-moz-linear-gradient( center top, #F5D589 5%, #EEBA35 100% );
  filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=’#F5D589′, endColorstr=’#EEBA35′);
  background-color:#eeba35;
}
.amazonbutton:active {
  position:relative;
  top:1px;
}

